--- a/ex03.html
+++ b/ex03.html
@@ -17,16 +17,46 @@
     var LOWER = 'abcdefghijklmnopqrstuvwxyz';
     var result = [];
 
+    // for(let x = 0;x<str.length;x++){
+    //     if(UPPER.indexOf(str[x]) !== -1 ){
+    //         result.push(str[x].toLowerCase());
+    //     }else if(LOWER.indexOf(str[x]) !== -1){
+    //         result.push(str[x].toUpperCase());
+    //     }else {
+    //         result.push(str[x]);
+    //     }
+    //
+    // }
+
+    // for(let x = 0;x<str.length;x++){
+    // let flag = false;
+    //     for(let i = 0;i<UPPER.length;i++){
+    //             if(str[x] === UPPER[i]){
+    //                 result.push(str[x].toLowerCase());
+    //                 flag = false;
+    //                 break;
+    //             }else if(str[x] === LOWER[i]){
+    //                 result.push(str[x].toUpperCase());
+    //                 flag = false;
+    //                 break;
+    //             } else {
+    //                 flag = true;
+    //             }
+    //     }
+    //     if(flag){
+    //         result.push(str[x])
+    //     }
+    // }
     for(let x = 0;x<str.length;x++){
-        if(UPPER.indexOf(str[x]) !== -1 ){
+        if(str[x] === str[x].toUpperCase()){
             result.push(str[x].toLowerCase());
-        }else if(LOWER.indexOf(str[x]) !== -1){
+        }else if(str[x] === str[x].toLowerCase()){
             result.push(str[x].toUpperCase());
-        }else {
+        }else{
             result.push(str[x]);
         }
-
     }
+
     console.log(result.join(''));
 </script>
 </html>
